fixed up entire calculator with functioning basics

--- a/index.html
+++ b/index.html
@@ -4,13 +4,33 @@
         <meta charset="UTF-8">
         <title>Calculator</title>
         <link rel="stylesheet" href="style.css">
-        <script src="script.js"></script>
+        <script src="script.js" defer></script>
     </head>
     <body>
         <div class="calculator">
             <div class="screen">
+                <div class="row"></div>
+            </div>
+            <div class="backspace">
+                <!-- <button value="delete">Delete</button> -->
+                <button value="clear">Clear</button>
             </div>
             <div class="btns-container">
+                <button value="1" class="numeric">1</button>
+                <button value="2" class="numeric">2</button>
+                <button value="3" class="numeric">3</button>
+                <button value="add" class="operator">+</button>
+                <button value="4"class="numeric">4</button>
+                <button value="5"class="numeric">5</button>
+                <button value="6"class="numeric">6</button>
+                <button value="subtract" class="operator">-</button>
+                <button value="7" class="numeric">7</button>
+                <button value="8" class="numeric">8</button>
+                <button value="9" class="numeric">9</button>
+                <button value="multiply" class="operator">x</button>
+                <button value="0" class="numeric">0</button>
+                <button value="calculate">=</button>
+                <button value="divide" class="operator">÷</button>
             </div>
         </div>
     </body>
